--- a/templates/index.html
+++ b/templates/index.html
@@ -168,21 +168,23 @@
         <footer>
             <div class="contact-form">
                 <div class="split-ui">
-
+                    <h1>J2k Entertainments wants to hear from you</h1>
                 </div>
                 <form action="">
-                    <input type="text" name="title" id="title">
-                    <textarea name="content" id="" cols="30" rows="10">
-
+                    <input type="text" name="name" placeholder="Name" id="name">
+                    <input type="text" name="title" placeholder="Subject" id="name">
+                    <input type="email" name="email" placeholder="Email" id="email">
+                    <textarea name="content" id="text-content"  cols="30" rows="10">
                     </textarea>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Send Message">
                 </form>
             </div>
             <div class="contact">
                 <div class="socials">
                     <div class="contacts">
-                        <p></p>
-                        <p><i class="fas fa-map-marker-alt"></i></p>
+                        <p>+2349026755437</p>
+                        <p>+2348175034654</p>
+                        <p><i class="fas fa-map-marker-alt"></i> 30,Aka Road</p>
                     </div>
                     <div class="accounts">
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -192,6 +194,8 @@
                     </div>
                 </div>
                 <nav>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#"> Privacy Policy</a></li>
                 </nav>
                 <div class="powered">
