--- a/templates/index.html
+++ b/templates/index.html
@@ -194,13 +194,16 @@
                     </div>
                 </div>
                 <nav>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#"> Privacy Policy</a></li>
+                    <div class="powered">
+                        <p>&copy; copyright <strong>create wonders</strong>.all right reserved</p>
+                    </div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#"> Privacy Policy</a></li>
+                    </ul>
                 </nav>
-                <div class="powered">
-                    <p>&copy;create wonders</p>
-                </div>
+                
             </div>
         </footer>
     </div>
